@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Change test order to speed up some, fix comments.
+ server/c_object.c
+Nicolas Weeger 2008-03-30
+
 Rename a few xxx_player() functions to xxx_living() for coherence.
  include/sproto.h
  server/apply.c attack.c skills.c spell_effect.c spell_util.c
